5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1575_1326.log
== TEST (2019-03-12 11:29:58) 
-- CODE:
print("R$" 75,00)
-- ERROR:
File "XXXX", line 1
    print("R$" 75,00)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:30:36) 
-- CODE:
print("R$ 75,00")
-- OUTPUT:
R$ 75,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:30:42) 
-- CODE:
print("R$ 75,00")
-- EXECUTION TIME:
0.123646
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$ 75,00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:30:53) 
-- CODE:
print(R$ 75,00)
-- ERROR:
File "XXXX", line 1
    print(R$ 75,00)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:31:14) 
-- CODE:
print("R$75,00")
-- OUTPUT:
R$75,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:31:19) 
-- CODE:
print("R$75,00")
-- EXECUTION TIME:
0.130875
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$75,00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:31:40) 
-- CODE:
print("R$75")
-- EXECUTION TIME:
0.154766
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:31:44) 
-- CODE:
print("R$75")
-- OUTPUT:
R$75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:31:56) 
-- CODE:
print(R$75)
-- ERROR:
File "XXXX", line 1
    print(R$75)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:32:16) 
-- CODE:
print("R$"75)
-- ERROR:
File "XXXX", line 1
    print("R$"75)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:32:26) 
-- CODE:
print("R$" 75)
-- ERROR:
File "XXXX", line 1
    print("R$" 75)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:33:36) 
-- CODE:
print( 75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:33:40) 
-- CODE:
print( 75)
-- EXECUTION TIME:
0.152698
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
